--- a/HelloWorld/HelloWorld/MyXamlMainPage.xaml
+++ b/HelloWorld/HelloWorld/MyXamlMainPage.xaml
@@ -6,14 +6,16 @@
 	<ContentPage.Content>
 		<StackLayout HorizontalOptions="Center" VerticalOptions="Center">
 			<Label 
+				x:Name="helloLabel"
 				Text="Hello World"
 				XAlign="Center"
 				FontSize="40"
 				FontFamily="Helvetica" />
+			<Button Text="Click me!" Clicked="OnButtonClicked" />
 			<Label 
 				Text="Please enjoy this app I made for you"
-				FontFamily="Monospace" />
-			<Button Text="Click me!" Clicked="OnButtonClicked" />
+				FontFamily="Monospace"
+				XAlign="Center" />			
 		</StackLayout>
 	</ContentPage.Content>
 </ContentPage>
