--- a/Tabs/Tabs/MyMainPage.xaml
+++ b/Tabs/Tabs/MyMainPage.xaml
@@ -20,4 +20,10 @@
 			<Label x:Name="ipLabel" Text="?" XAlign="Center" />
 		</StackLayout>
 	</ContentPage>
+	<ContentPage Title="List" Icon="game-controller-a.png">
+		<ContentPage.Padding>
+			0,20,0,0
+		</ContentPage.Padding>
+		<ListView x:Name="listView" />		
+	</ContentPage>
 </TabbedPage>
