Make the app work better on Android
Get the screen dimensions inside of MainActivity.cs and use the
OnPlatform element to only have a top padding on iOS.

--- a/Tabs/Tabs/MyMainPage.xaml
+++ b/Tabs/Tabs/MyMainPage.xaml
@@ -22,7 +22,7 @@
 	</ContentPage>
 	<ContentPage Title="List" Icon="game-controller-a.png">
 		<ContentPage.Padding>
-			0,20,0,0
+			<OnPlatform x:TypeArguments="Thickness" iOS="0, 20,  0, 0" />
 		</ContentPage.Padding>
 		<ListView x:Name="listView" />		
 	</ContentPage>
